deploy_pack/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pq-shield-headless
  labels:
    app: pq-shield
spec:
  clusterIP: None
  ports:
  - port: 18080
    name: heartbeat
    protocol: UDP
  selector:
    app: pq-shield
---
apiVersion: v1
kind: Service
metadata:
  name: pq-shield-lb
  labels:
    app: pq-shield
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: proxy
    name: proxy
  - port: 8081
    targetPort: admin
    name: admin
  selector:
    app: pq-shield
